tests/error/modifier_errors/flags_nested_power_control.err
Error: Unitary constraint violation (at $FILE:16:12)
   | 
14 |     with power(2):
15 |         with control(ctrl):
16 |             foo(q)
   |             ^^^^^^ This function cannot be called in a control context

Guppy compilation failed due to 1 previous error
